[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prismeai-sdk-agents"
version = "0.1.0"
description = "Official Prisme.ai Python SDK for Agent Factory and Storage APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Prisme.ai" }]
keywords = ["prismeai", "prisme", "ai", "sdk", "agent", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.7.0",
    "anyio>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/prismeai/sdk-agents-python"
Repository = "https://github.com/prismeai/sdk-agents-python"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "respx>=0.20",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prismeai"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100
